--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <div class=""></div>
+
+<header id="header">
+    <img src="images/logo.png" alt=""/>
+    <span>My Dashboard</span>
+</header>
+<nav id="navigation">
+    <a href="#"><i class="sprite sprite-header1"></i></a>
+    <span>John Doe</span>
+    <a href="#"><i class="sprite sprite-header2"></i></a>
+    <span>Sign out</span>
+</nav>
+
+<div id="content">
+
+<i class="sprite sprite-arrow"></i>
+<i class="sprite sprite-edit"></i>
+<i class="sprite sprite-header1"></i>
+<i class="sprite sprite-header2"></i>
+<i class="sprite sprite-mail"></i>
+<i class="sprite sprite-paper_copy"></i>
+<i class="sprite sprite-pay"></i>
+<i class="sprite sprite-plus"></i>
+<i class="sprite sprite-upload"></i>
+
+</div>
+
 </body>
 </html>
