--- a/Citizen Dashboard New Member.html
+++ b/Citizen Dashboard New Member.html
@@ -6,6 +6,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="container wrapper-container">
+    <div class="row">
+        <div class="col-lg-offset-1 col-sm-1 col-md-6 col-lg-6">
+            My massage
+        </div>
+        <div class="col-sm-1 col-md-6 col-lg-5 ">
+            <button class="pull-right">
+                Click
+            </button>
+        </div>
+    </div>
+    <div class="row">
+        <div class=" grey-wrapper text-center">
+            <p>You have no messages</p>
+        </div>
+    </div>
+</div>
 
 
 </body>
