--- a/Admin_Dashboard.html
+++ b/Admin_Dashboard.html
@@ -25,17 +25,36 @@
 <div class="container wrapper-container">
     <div class="row">
         <div class="col-sm-6 col-md-6 col-lg-6">
-            <strong>My massage</strong>
+            <strong>Enrollment Administration</strong>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6">
-            <button type="button" class="button pull-right ">
-                <i class="sprite sprite-mail"></i>
-                <span>Navigate to Message Center</span>
+            <button type="button" class="button pull-right">
+                <i class="sprite sprite-arrow"></i>
+                <span>Manage Enrollments</span>
             </button>
         </div>
     </div>
-    <div class=" grey-wrapper text-center">
-        <p>You have no messages</p>
+    <div class=" grey-wrapper ">
+        <div class="row">
+            <div class=" col-lg-4 col-md-4 col-sm-4">
+                <ul>
+                    <li><p>Look up a Household Case</p></li>
+                    <li><p>Enroll a Citizen</p></li>
+                </ul>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+                <ul>
+                    <li><p>Update Enrollments</p></li>
+                    <li><p>Manage Enrollment Activites</p></li>
+                </ul>
+            </div>
+            <div class=" col-lg-4 col-md-4 col-sm-4">
+                <ul>
+                    <li><p>Manage Past Enrollments</p></li>
+                    <li><p>Monitor Enrollment Counts</p></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
 <div class="container wrapper-container">
@@ -50,7 +69,7 @@
             </button>
         </div>
     </div>
-    <div class=" grey-wrapper text-center">
+    <div class=" grey-wrapper ">
         <div class="row">
             <div class="col-lg-4"></div>
             <div class="col-lg-4"></div>
@@ -60,19 +79,21 @@
             <div class=" col-lg-4 col-md-4 col-sm-4">
                 <ul>
                     <li><p>Look up Accounts, Payments, Invoices, Adjustments, etc.</p></li>
-                    <li><p>Look up Accounts, Payments, Invoices, Adjustments, etc.</p></li>
+                    <li><p>Create Manual Payments and Apply Payments</p></li>
                 </ul>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4">
                 <ul>
-                    <li><p>Look up Accounts, Payments, Invoices, Adjustments, etc.</p></li>
-                    <li><p>Look up Accounts, Payments, Invoices, Adjustments, etc.</p></li>
+                    <li><p>Create Manual Invoices and
+                        Adjustments</p></li>
+                    <li><p>Create Refunds and Disputes</p></li>
                 </ul>
             </div>
             <div class=" col-lg-4 col-md-4 col-sm-4">
                 <ul>
-                    <li><p>Look up Accounts, Payments, Invoices, Adjustments, etc.</p></li>
-                    <li><p>Look up Accounts, Payments, Invoices, Adjustments, etc.</p></li>
+                    <li><p>Create Payment Reversals and Transfers</p></li>
+                    <li><p>View Accounting Records</p></li>
+                    <li><p>Export Records</p></li>
                 </ul>
             </div>
         </div>
