--- a/buttons.html
+++ b/buttons.html
@@ -5,7 +5,7 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body style="margin-left: 2px;">
 <div style="background-color: #999999">
     <i class="sprite sprite-arrow"></i>
     <i class="sprite sprite-edit"></i>
@@ -18,13 +18,46 @@
     <i class="sprite sprite-upload"></i>
 </div>
 <br>
-<button type="button" class="button"><div><i class="sprite sprite-plus"></i><span>Add New Member</span></div></button> <br><br>
-<button type="button" class="button"><i class="sprite sprite-mail"></i><span>Navigate to Message Center</span></button> <br><br>
-<button type="button" class="button"><i class="sprite sprite-mail"></i><span>View Benefit Details</span></button> <br><br>
-<button type="button" class="button"><i class="sprite sprite-pay"></i><span>Make Payment</span></button> <br><br>
-<button type="button" class="button"><i class="sprite sprite-upload"></i><span>Upload Supporting Documents</span></button> <br><br>
-<button type="button" class="button"><i class="sprite sprite-arrow"></i><span>Manage Enrollments</span></button> <br><br>
-<button type="button" class="button"><i class="sprite sprite-arrow"></i><span>Manage Invoices</span></button> <br><br>
-<button type="button" class="apply-button"><i class="sprite sprite-paper_copy"></i> Apply for Benefits</button>
+<button class="b-button">
+    <span class="b-button__content b-button__content_icon b-button__content_icon-paper">Add New Member</span>
+</button> <br><br>
+<button class="b-button">
+    <span class="b-button__content b-button__content_icon b-button__content_icon-mail">Navigate to Message Center</span>
+</button> <br><br>
+<button class="button">
+    <span class="sprite-img"><i class="sprite sprite-mail"></i></span>
+    <span class="button-message">View Benefit Details</span>
+</button> <br><br>
+<button class="button">
+    <span class="sprite-img"><i class="sprite sprite-pay"></i></span>
+    <span class="button-message">Make Payment</span>
+</button> <br><br>
+<button class="button">
+    <span class="sprite-img"><i class="sprite sprite-upload"></i></span>
+    <span class="button-message">Upload Supporting Documents</span>
+</button> <br><br>
+<button class="button">
+    <span class="sprite-img"><i class="sprite sprite-arrow"></i></span>
+    <span class="button-message">Manage Enrollments</span>
+</button> <br><br>
+<button class="button">
+    <span class="sprite-img"><i class="sprite sprite-arrow"></i></span>
+    <span class="button-message">Manage Invoices</span>
+</button> <br><br>
+<button class="button button_green button_apply">
+    <span class="sprite-img"><i class="sprite sprite-paper_copy"></i></span>
+    <span class="button-message">Apply for Benefits</span>
+</button> <br><br>
+<button class="button button_gray">
+    <span class="sprite-img"><i class="sprite sprite-upload"></i></span>
+    <span class="button-message">Upload Supporting Documents</span>
+</button> <br><br>
+<button class="button button_gray button_cancel">
+    <span class="button-message">Cancel</span>
+</button>
+<button class="button button_green">
+    <span class="button-message">Submit</span>
+</button>
+
 </body>
 </html>
