add bem gen-container

--- a/Admin_Dashboard.html
+++ b/Admin_Dashboard.html
@@ -6,100 +6,90 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="container wrapper-container">
-    <div class="row">
-        <div class="col-sm-6 col-md-6 col-lg-6">
-            <strong>My massage</strong>
+<div class="container b-gen-container">
+    <div class="b-gen-container__header-pane row ">
+        <div class="b-gen-container__header-heading col-sm-6 col-md-6 col-lg-6"><h4>My massage</h4>
         </div>
-        <div class="col-sm-6 col-md-6 col-lg-6">
-            <button type="button" class="button pull-right ">
-                <i class="sprite sprite-mail"></i>
-                <span>Navigate to Message Center</span>
+        <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
+            <button class="b-button">
+                <span class="b-button__content b-button__content_icon b-button__content_icon-mail">Navigate to Message Center</span>
             </button>
         </div>
     </div>
-    <div class=" grey-wrapper text-center">
-        <p>You have no messages</p>
+    <div class=" b-gen-container__container-pane b-gen-container__container-pane_link_color  text-center">
+        You have no messages
     </div>
 </div>
-<div class="container wrapper-container">
-    <div class="row">
-        <div class="col-sm-6 col-md-6 col-lg-6">
-            <strong>Enrollment Administration</strong>
+<div class="container b-gen-container">
+    <div class="b-gen-container__header-pane row">
+        <div class="b-gen-container__header-heading col-sm-6 col-md-6 col-lg-6">
+            <h4>Enrollment Administration</h4>
         </div>
-        <div class="col-sm-6 col-md-6 col-lg-6">
-            <button type="button" class="button pull-right">
-                <i class="sprite sprite-arrow"></i>
-                <span>Manage Enrollments</span>
+        <div class="b-gen-container__button-container col-sm-6 col-md-6 col-lg-6">
+            <button class="button">
+                <span class="sprite-img"><i class="sprite sprite-arrow"></i></span>
+                <span class="button-message">Manage Enrollments</span>
             </button>
         </div>
     </div>
-    <div class=" grey-wrapper ">
-        <div class="row">
-            <div class=" col-lg-4 col-md-4 col-sm-4">
-                <ul>
-                    <li><p>Look up a Household Case</p></li>
-                    <li><p>Enroll a Citizen</p></li>
-                </ul>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4">
-                <ul>
-                    <li><p>Update Enrollments</p></li>
-                    <li><p>Manage Enrollment Activites</p></li>
-                </ul>
-            </div>
-            <div class=" col-lg-4 col-md-4 col-sm-4">
-                <ul>
-                    <li><p>Manage Past Enrollments</p></li>
-                    <li><p>Monitor Enrollment Counts</p></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="container wrapper-container">
-    <div class="row">
-        <div class="col-sm-6 col-md-6 col-lg-6">
-            <strong>Financials Administration</strong>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-6">
-            <button type="button" class="button pull-right ">
-                <i class="sprite sprite-mail"></i>
-                <span>Navigate to Message Center</span>
-            </button>
-        </div>
-    </div>
-    <div class=" grey-wrapper ">
-        <div class="row">
-            <div class="col-lg-4"></div>
-            <div class="col-lg-4"></div>
-            <div class="col-lg-4"></div>
-        </div>
-        <div class="row">
-            <div class=" col-lg-4 col-md-4 col-sm-4">
-                <ul>
-                    <li><p>Look up Accounts, Payments, Invoices, Adjustments, etc.</p></li>
-                    <li><p>Create Manual Payments and Apply Payments</p></li>
-                </ul>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4">
-                <ul>
-                    <li><p>Create Manual Invoices and
-                        Adjustments</p></li>
-                    <li><p>Create Refunds and Disputes</p></li>
-                </ul>
-            </div>
-            <div class=" col-lg-4 col-md-4 col-sm-4">
-                <ul>
-                    <li><p>Create Payment Reversals and Transfers</p></li>
-                    <li><p>View Accounting Records</p></li>
-                    <li><p>Export Records</p></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
+    <div class="b-gen-container__container-pane b-gen-container__container-pane_link_color ">
 
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4">
+                <ul>
+                    <li><a class="b-gen-container__container-pane_marker-distance">Look up a Household Case</a></li>
+                    <li><a class="b-gen-container__container-pane_marker-distance">Enroll a Citizen</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+                <ul>
+                    <li><a class="b-gen-container__container-pane_marker-distance">Update Enrollments</a></li>
+                    <li><a class="b-gen-container__container-pane_marker-distance">Manage Enrollment Activites</a></li>
+                </ul>
+            </div>
+            <div class=" col-lg-4 col-md-4 col-sm-4">
+                <ul>
+                    <li><a class="b-gen-container__container-pane_marker-distance">Manage Past Enrollments</a></li>
+                    <li><a class="b-gen-container__container-pane_marker-distance">Monitor Enrollment Counts</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container b-gen-container">
+    <div class="b-gen-container__header-pane row ">
+        <div class="b-gen-container__header-heading col-sm-6 col-md-6 col-lg-6">
+            <h4>Financials Administration</h4>
+        </div>
+        <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
+            <button class="b-button">
+                <span class="b-button__content b-button__content_icon b-button__content_icon-mail">Navigate to Message Center</span>
+            </button>
+        </div>
+    </div>
+    <div class=" b-gen-container__container-pane ">
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4">
+                <ul>
+                    <li><a class="b-gen-container__container-pane_marker-distance">Look up Accounts, Payments, Invoices, Adjustments, etc.</a></li>
+                    <li><a class="b-gen-container__container-pane_marker-distance">Create Manual Payments and Apply Payments</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4">
+                <ul>
+                    <li><a class="b-gen-container__container-pane_marker-distance">Create Manual Invoices and Adjustments</a></li>
+                    <li><a class="b-gen-container__container-pane_marker-distance">Create Refunds and Disputes</a></li>
+                </ul>
+            </div>
+            <div class=" col-lg-4 col-md-4 col-sm-4">
+                <ul>
+                    <li><a class="b-gen-container__container-pane_marker-distance">Create Payment Reversals and Transfers</a></li>
+                    <li><a class="b-gen-container__container-pane_marker-distance">View Accounting Records</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
