hot-fix after merging

--- a/Admin_Dashboard.html
+++ b/Admin_Dashboard.html
@@ -8,10 +8,11 @@
 <body>
 <div class="container b-gen-container">
     <div class="b-gen-container__header-pane row ">
-        <div class="b-gen-container__header-heading col-sm-6 col-md-6 col-lg-6"><h4>My massage</h4>
+        <div class="b-gen-container__header-heading col-sm-6 col-md-6 col-lg-6">
+            <h4>My massage</h4>
         </div>
         <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
-            <button class="b-button">
+            <button type="button" class="b-button">
                 <span class="b-button__content b-button__content_icon b-button__content_icon-mail">Navigate to Message Center</span>
             </button>
         </div>
@@ -26,9 +27,8 @@
             <h4>Enrollment Administration</h4>
         </div>
         <div class="b-gen-container__button-container col-sm-6 col-md-6 col-lg-6">
-            <button class="button">
-                <span class="sprite-img"><i class="sprite sprite-arrow"></i></span>
-                <span class="button-message">Manage Enrollments</span>
+            <button type="button" class="b-button">
+                <span class="b-button__content b-button__content_icon b-button__content_icon-arrow">Manage Enrollments</span>
             </button>
         </div>
     </div>
@@ -62,8 +62,8 @@
             <h4>Financials Administration</h4>
         </div>
         <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
-            <button class="b-button">
-                <span class="b-button__content b-button__content_icon b-button__content_icon-mail">Navigate to Message Center</span>
+            <button type="button" class="b-button">
+                <span class="b-button__content b-button__content_icon b-button__content_icon-arrow">Manage Invoices</span>
             </button>
         </div>
     </div>
@@ -71,19 +71,23 @@
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4">
                 <ul>
-                    <li><a class="b-gen-container__container-pane_marker-distance">Look up Accounts, Payments, Invoices, Adjustments, etc.</a></li>
-                    <li><a class="b-gen-container__container-pane_marker-distance">Create Manual Payments and Apply Payments</a></li>
+                    <li><a class="b-gen-container__container-pane_marker-distance">Look up Accounts, Payments, Invoices,
+                        Adjustments, etc.</a></li>
+                    <li><a class="b-gen-container__container-pane_marker-distance">Create Manual Payments and Apply
+                        Payments</a></li>
                 </ul>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4">
                 <ul>
-                    <li><a class="b-gen-container__container-pane_marker-distance">Create Manual Invoices and Adjustments</a></li>
+                    <li><a class="b-gen-container__container-pane_marker-distance">Create Manual Invoices and
+                        Adjustments</a></li>
                     <li><a class="b-gen-container__container-pane_marker-distance">Create Refunds and Disputes</a></li>
                 </ul>
             </div>
             <div class=" col-lg-4 col-md-4 col-sm-4">
                 <ul>
-                    <li><a class="b-gen-container__container-pane_marker-distance">Create Payment Reversals and Transfers</a></li>
+                    <li><a class="b-gen-container__container-pane_marker-distance">Create Payment Reversals and
+                        Transfers</a></li>
                     <li><a class="b-gen-container__container-pane_marker-distance">View Accounting Records</a></li>
                 </ul>
             </div>
