--- a/elements.html
+++ b/elements.html
@@ -27,6 +27,7 @@
 <button type="button" class="b-button">
     <span class="b-button__content b-button__content_icon b-button__content_icon-mail">View Benefit Details</span>
 </button> <br><br>
+</button> <br><br>
 <button type="button" class="b-button">
     <span class="b-button__content b-button__content_icon b-button__content_icon-pay">View Benefit Details</span>
 </button> <br><br>
