--- a/Admin_Dashboard.html
+++ b/Admin_Dashboard.html
@@ -9,7 +9,7 @@
 <div class="container b-gen-container">
     <div class="b-gen-container__header-pane row ">
         <div class="b-gen-container__header-heading col-sm-6 col-md-6 col-lg-6">
-            <h4>My massage</h4>
+            <h2 class="b-gen-container__header-heading-text">My message</h2>
         </div>
         <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
             <button type="button" class="b-button">
@@ -24,7 +24,7 @@
 <div class="container b-gen-container">
     <div class="b-gen-container__header-pane row">
         <div class="b-gen-container__header-heading col-sm-6 col-md-6 col-lg-6">
-            <h4>Enrollment Administration</h4>
+            <h2 class="b-gen-container__header-heading-text">Enrollment Administration</h2>
         </div>
         <div class="b-gen-container__button-container col-sm-6 col-md-6 col-lg-6">
             <button type="button" class="b-button">
@@ -37,20 +37,26 @@
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4">
                 <ul>
-                    <li><a class="b-gen-container__container-pane_marker-distance">Look up a Household Case</a></li>
-                    <li><a class="b-gen-container__container-pane_marker-distance">Enroll a Citizen</a></li>
+                    <li class="b-gen-container__container-pane_row-distance"><a
+                            class="b-gen-container__container-pane_marker-distance">Look up a Household Case</a></li>
+                    <li class="b-gen-container__container-pane_row-distance"><a
+                            class="b-gen-container__container-pane_marker-distance">Enroll a Citizen</a></li>
                 </ul>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4">
                 <ul>
-                    <li><a class="b-gen-container__container-pane_marker-distance">Update Enrollments</a></li>
-                    <li><a class="b-gen-container__container-pane_marker-distance">Manage Enrollment Activites</a></li>
+                    <li class="b-gen-container__container-pane_row-distance"><a
+                            class="b-gen-container__container-pane_marker-distance">Update Enrollments</a></li>
+                    <li class="b-gen-container__container-pane_row-distance"><a
+                            class="b-gen-container__container-pane_marker-distance">Manage Enrollment Activites</a></li>
                 </ul>
             </div>
             <div class=" col-lg-4 col-md-4 col-sm-4">
                 <ul>
-                    <li><a class="b-gen-container__container-pane_marker-distance">Manage Past Enrollments</a></li>
-                    <li><a class="b-gen-container__container-pane_marker-distance">Monitor Enrollment Counts</a></li>
+                    <li class="b-gen-container__container-pane_row-distance"><a
+                            class="b-gen-container__container-pane_marker-distance">Manage Past Enrollments</a></li>
+                    <li class="b-gen-container__container-pane_row-distance"><a
+                            class="b-gen-container__container-pane_marker-distance">Monitor Enrollment Counts</a></li>
                 </ul>
             </div>
         </div>
@@ -59,7 +65,7 @@
 <div class="container b-gen-container">
     <div class="b-gen-container__header-pane row ">
         <div class="b-gen-container__header-heading col-sm-6 col-md-6 col-lg-6">
-            <h4>Financials Administration</h4>
+            <h2 class="b-gen-container__header-heading-text">Financials Administration</h2>
         </div>
         <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
             <button type="button" class="b-button">
@@ -71,24 +77,32 @@
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4">
                 <ul>
-                    <li><a class="b-gen-container__container-pane_marker-distance">Look up Accounts, Payments, Invoices,
+                    <li class="b-gen-container__container-pane_row-distance"><a
+                            class="b-gen-container__container-pane_marker-distance">Look up Accounts, Payments,
+                        Invoices,
                         Adjustments, etc.</a></li>
-                    <li><a class="b-gen-container__container-pane_marker-distance">Create Manual Payments and Apply
+                    <li class="b-gen-container__container-pane_row-distance"><a
+                            class="b-gen-container__container-pane_marker-distance">Create Manual Payments and Apply
                         Payments</a></li>
                 </ul>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4">
                 <ul>
-                    <li><a class="b-gen-container__container-pane_marker-distance">Create Manual Invoices and
+                    <li class="b-gen-container__container-pane_row-distance"><a
+                            class="b-gen-container__container-pane_marker-distance">Create Manual Invoices and
                         Adjustments</a></li>
-                    <li><a class="b-gen-container__container-pane_marker-distance">Create Refunds and Disputes</a></li>
+                    <li class="b-gen-container__container-pane_row-distance"><a
+                            class="b-gen-container__container-pane_marker-distance">Create Refunds and Disputes</a></li>
                 </ul>
             </div>
             <div class=" col-lg-4 col-md-4 col-sm-4">
                 <ul>
-                    <li><a class="b-gen-container__container-pane_marker-distance">Create Payment Reversals and
-                        Transfers</a></li>
-                    <li><a class="b-gen-container__container-pane_marker-distance">View Accounting Records</a></li>
+                    <li class="b-gen-container__container-pane_row-distance"><a
+                            class="b-gen-container__container-pane_marker-distance">Create Payment Reversals and Transfers</a></li>
+                    <li class="b-gen-container__container-pane_row-distance"><a
+                            class="b-gen-container__container-pane_marker-distance">View Accounting Records</a></li>
+                    <li class="b-gen-container__container-pane_row-distance"><a
+                            class="b-gen-container__container-pane_marker-distance">Export Records</a></li>
                 </ul>
             </div>
         </div>
