--- a/Admin_Dashboard.html
+++ b/Admin_Dashboard.html
@@ -9,7 +9,7 @@
 <div class="container b-gen-container">
     <div class="b-gen-container__header-pane row ">
         <div class="b-gen-container__header-heading col-sm-6 col-md-6 col-lg-6">
-            <h2 class="b-gen-container__header-heading-text">My message</h2>
+            <h2 class="b-gen-container__header-heading-text">My Messages</h2>
         </div>
         <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
             <button type="button" class="b-button">
