--- a/index.html
+++ b/index.html
@@ -7,40 +7,144 @@
 </head>
 <body class="b-dashboard">
 
-<div class="b-dashboard__header">
-    <header class="b-header">
-        <div class="b-header__logo">
-            <div class="b-logo">
-                <div class="b-logo__logo">
-                    <img src="images/logo.png" alt=""/>
+    <div class="b-dashboard__header">
+        <header class="b-header">
+            <div class="b-header__logo">
+                <div class="b-logo">
+                    <div class="b-logo__logo">
+                        <img src="images/logo.png" alt=""/>
+                    </div>
+                    <div class="b-logo__text">
+                        <span>My Dashboard</span>
+                    </div>
                 </div>
-                <div class="b-logo__text">
-                    <span>My Dashboard</span>
+            </div>
+        </header>
+    </div>
+
+    <div class="b-dashboard__nav-bar">
+        <div class="b-nav-bar">
+            <div class="b-nav__primary-menu">
+                <nav class="b-primary-menu">
+                    <a class="b-primary-menu__item b-primary-menu__item_person-name ">
+                        <span class="b-primary-menu__content_icon b-button__content_icon-user_info">John Doe</span>
+                    </a>
+                    <a class="b-primary-menu__item b-primary-menu__item_sign-out">
+                        <span class="b-primary-menu__content_icon b-button__content_icon-sign_out">Sign out</span>
+                    </a>
+                </nav>
+            </div>
+        </div>
+    </div>
+
+    <div class="b-dashboard__content">
+
+        <div class="container b-gen-container">
+            <div class="b-gen-container__header-pane row ">
+                <div class="b-gen-container__header-heading col-sm-6 col-md-6 col-lg-6">
+                    <h2 class="b-gen-container__header-heading-text">My Messages</h2>
+                </div>
+                <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
+                    <button type="button" class="b-button">
+                        <span class="b-button__content b-button__content_icon b-button__content_icon-mail">Navigate to Message Center</span>
+                    </button>
+                </div>
+            </div>
+            <div class=" b-gen-container__container-pane b-gen-container__container-pane_link_color  text-center">
+                You have no messages
+            </div>
+        </div>
+        <div class="container b-gen-container">
+            <div class="b-gen-container__header-pane row">
+                <div class="b-gen-container__header-heading col-sm-6 col-md-6 col-lg-6">
+                    <h2 class="b-gen-container__header-heading-text">Enrollment Administration</h2>
+                </div>
+                <div class="b-gen-container__button-container col-sm-6 col-md-6 col-lg-6">
+                    <button type="button" class="b-button">
+                        <span class="b-button__content b-button__content_icon b-button__content_icon-arrow">Manage Enrollments</span>
+                    </button>
+                </div>
+            </div>
+            <div class="b-gen-container__container-pane b-gen-container__container-pane_link_color ">
+
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-4">
+                        <ul>
+                            <li class="b-gen-container__container-pane_row-distance"><a
+                                    class="b-gen-container__container-pane_marker-distance">Look up a Household Case</a></li>
+                            <li class="b-gen-container__container-pane_row-distance"><a
+                                    class="b-gen-container__container-pane_marker-distance">Enroll a Citizen</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-4">
+                        <ul>
+                            <li class="b-gen-container__container-pane_row-distance"><a
+                                    class="b-gen-container__container-pane_marker-distance">Update Enrollments</a></li>
+                            <li class="b-gen-container__container-pane_row-distance"><a
+                                    class="b-gen-container__container-pane_marker-distance">Manage Enrollment Activites</a></li>
+                        </ul>
+                    </div>
+                    <div class=" col-lg-4 col-md-4 col-sm-4">
+                        <ul>
+                            <li class="b-gen-container__container-pane_row-distance"><a
+                                    class="b-gen-container__container-pane_marker-distance">Manage Past Enrollments</a></li>
+                            <li class="b-gen-container__container-pane_row-distance"><a
+                                    class="b-gen-container__container-pane_marker-distance">Monitor Enrollment Counts</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </header>
-</div>
-
-<div class="b-dashboard__nav-bar">
-
-    <div class="b-nav-bar">
-        <div class="b-nav__primary-menu">
-            <nav class="b-primary-menu">
-                <a class="b-primary-menu__item b-primary-menu__item_person-name">
-                    John Doe
-                </a>
-                <a class="b-primary-menu__item b-primary-menu__item_sign-out">
-                    Sign Out
-                </a>
-            </nav>
+        <div class="container b-gen-container">
+            <div class="b-gen-container__header-pane row ">
+                <div class="b-gen-container__header-heading col-sm-6 col-md-6 col-lg-6">
+                    <h2 class="b-gen-container__header-heading-text">Financials Administration</h2>
+                </div>
+                <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
+                    <button type="button" class="b-button">
+                        <span class="b-button__content b-button__content_icon b-button__content_icon-arrow">Manage Invoices</span>
+                    </button>
+                </div>
+            </div>
+            <div class=" b-gen-container__container-pane ">
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-4">
+                        <ul>
+                            <li class="b-gen-container__container-pane_row-distance"><a
+                                    class="b-gen-container__container-pane_marker-distance">Look up Accounts, Payments,
+                                Invoices,
+                                Adjustments, etc.</a></li>
+                            <li class="b-gen-container__container-pane_row-distance"><a
+                                    class="b-gen-container__container-pane_marker-distance">Create Manual Payments and Apply
+                                Payments</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-4">
+                        <ul>
+                            <li class="b-gen-container__container-pane_row-distance"><a
+                                    class="b-gen-container__container-pane_marker-distance">Create Manual Invoices and
+                                Adjustments</a></li>
+                            <li class="b-gen-container__container-pane_row-distance"><a
+                                    class="b-gen-container__container-pane_marker-distance">Create Refunds and Disputes</a></li>
+                        </ul>
+                    </div>
+                    <div class=" col-lg-4 col-md-4 col-sm-4">
+                        <ul>
+                            <li class="b-gen-container__container-pane_row-distance"><a
+                                    class="b-gen-container__container-pane_marker-distance">Create Payment Reversals and Transfers</a></li>
+                            <li class="b-gen-container__container-pane_row-distance"><a
+                                    class="b-gen-container__container-pane_marker-distance">View Accounting Records</a></li>
+                            <li class="b-gen-container__container-pane_row-distance"><a
+                                    class="b-gen-container__container-pane_marker-distance">Export Records</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
+
+
+
     </div>
-</div>
-
-<div class="b-content">
-
-</div>
 
 
 </body>
