--- a/index.html
+++ b/index.html
@@ -8,29 +8,31 @@
 <body class="b-dashboard">
 
     <div class="b-dashboard__header">
-        <header class="b-header">
-            <div class="b-header__logo">
-                <div class="b-logo">
-                    <div class="b-logo__logo">
-                        <img src="images/logo.png" alt=""/>
-                    </div>
-                    <div class="b-logo__text">
-                        <span>My Dashboard</span>
+        <div class="b-gen-layout-wrapper">
+            <header class="b-header">
+                <div class="b-header__logo">
+                    <div class="b-logo">
+                        <div class="b-logo__logo">
+                            <img src="images/logo.png" alt=""/>
+                        </div>
+                        <div class="b-logo__text">
+                            <span>My Dashboard</span>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </header>
-    </div>
+            </header>
+        </div>
+        </div>
 
     <div class="b-dashboard__nav-bar">
         <div class="b-nav-bar">
             <div class="b-nav__primary-menu">
                 <nav class="b-primary-menu">
                     <a class="b-primary-menu__item b-primary-menu__item_person-name ">
-                        <span class="b-primary-menu__content_icon b-button__content_icon-user_info">John Doe</span>
+                        <div class="b-primary-menu__content_icon b-button__content_icon-user_info">John Doe</div>
                     </a>
                     <a class="b-primary-menu__item b-primary-menu__item_sign-out">
-                        <span class="b-primary-menu__content_icon b-button__content_icon-sign_out">Sign out</span>
+                        <div class="b-primary-menu__content_icon b-button__content_icon-sign_out">Sign out</div>
                     </a>
                 </nav>
             </div>
@@ -70,26 +72,20 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-4">
                         <ul>
-                            <li class="b-gen-container__container-pane_row-distance"><a
-                                    class="b-gen-container__container-pane_marker-distance">Look up a Household Case</a></li>
-                            <li class="b-gen-container__container-pane_row-distance"><a
-                                    class="b-gen-container__container-pane_marker-distance">Enroll a Citizen</a></li>
+                            <li class="b-gen-container__container-pane_row-distance">Look up a Household Case</li>
+                            <li class="b-gen-container__container-pane_row-distance">Enroll a Citizen</li>
                         </ul>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4">
                         <ul>
-                            <li class="b-gen-container__container-pane_row-distance"><a
-                                    class="b-gen-container__container-pane_marker-distance">Update Enrollments</a></li>
-                            <li class="b-gen-container__container-pane_row-distance"><a
-                                    class="b-gen-container__container-pane_marker-distance">Manage Enrollment Activites</a></li>
+                            <li class="b-gen-container__container-pane_row-distance">Update Enrollments</li>
+                            <li class="b-gen-container__container-pane_row-distance">Manage Enrollment Activites</li>
                         </ul>
                     </div>
                     <div class=" col-lg-4 col-md-4 col-sm-4">
                         <ul>
-                            <li class="b-gen-container__container-pane_row-distance"><a
-                                    class="b-gen-container__container-pane_marker-distance">Manage Past Enrollments</a></li>
-                            <li class="b-gen-container__container-pane_row-distance"><a
-                                    class="b-gen-container__container-pane_marker-distance">Monitor Enrollment Counts</a></li>
+                            <li class="b-gen-container__container-pane_row-distance">Manage Past Enrollments</li>
+                            <li class="b-gen-container__container-pane_row-distance">Monitor Enrollment Counts</li>
                         </ul>
                     </div>
                 </div>
@@ -110,32 +106,27 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-4">
                         <ul>
-                            <li class="b-gen-container__container-pane_row-distance"><a
-                                    class="b-gen-container__container-pane_marker-distance">Look up Accounts, Payments,
+                            <li class="b-gen-container__container-pane_row-distance">Look up Accounts, Payments,
                                 Invoices,
-                                Adjustments, etc.</a></li>
-                            <li class="b-gen-container__container-pane_row-distance"><a
-                                    class="b-gen-container__container-pane_marker-distance">Create Manual Payments and Apply
-                                Payments</a></li>
+                                Adjustments, etc.</li>
+                            <li class="b-gen-container__container-pane_row-distance">Create Manual Payments and Apply
+                                Payments</li>
                         </ul>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4">
                         <ul>
-                            <li class="b-gen-container__container-pane_row-distance"><a
-                                    class="b-gen-container__container-pane_marker-distance">Create Manual Invoices and
-                                Adjustments</a></li>
-                            <li class="b-gen-container__container-pane_row-distance"><a
-                                    class="b-gen-container__container-pane_marker-distance">Create Refunds and Disputes</a></li>
+                            <li class="b-gen-container__container-pane_row-distance">Create Manual Invoices and
+                                Adjustments</li>
+                            <li class="b-gen-container__container-pane_row-distance">Create Refunds and Disputes</li>
                         </ul>
                     </div>
                     <div class=" col-lg-4 col-md-4 col-sm-4">
                         <ul>
-                            <li class="b-gen-container__container-pane_row-distance"><a
-                                    class="b-gen-container__container-pane_marker-distance">Create Payment Reversals and Transfers</a></li>
-                            <li class="b-gen-container__container-pane_row-distance"><a
-                                    class="b-gen-container__container-pane_marker-distance">View Accounting Records</a></li>
-                            <li class="b-gen-container__container-pane_row-distance"><a
-                                    class="b-gen-container__container-pane_marker-distance">Export Records</a></li>
+                            <li class="b-gen-container__container-pane_row-distance">
+                                Create Payment Reversals and Transfers
+                            </li>
+                            <li class="b-gen-container__container-pane_row-distance">View Accounting Records</li>
+                            <li class="b-gen-container__container-pane_row-distance">Export Records</li>
                         </ul>
                     </div>
                 </div>
