--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
         </div>
 
     <div class="b-dashboard__nav-bar">
-        <div class="b-nav-bar">
-            <div class="b-nav__primary-menu">
-                <nav class="b-primary-menu">
-                    <a class="b-primary-menu__item b-primary-menu__item_person-name ">
-                        <div class="b-primary-menu__content_icon b-button__content_icon-user_info">John Doe</div>
-                    </a>
-                    <a class="b-primary-menu__item b-primary-menu__item_sign-out">
-                        <div class="b-primary-menu__content_icon b-button__content_icon-sign_out">Sign out</div>
-                    </a>
-                </nav>
+        <div class="b-gen-layout-wrapper">
+            <div class="b-nav-bar">
+                <div class="b-nav__primary-menu">
+                    <nav class="b-primary-menu">
+                        <a href='#' class="b-primary-menu__item b-primary-menu__item_person-name b-button__content_icon-user_info">
+                            John Doe
+                        </a>
+                        <a  href='#' class="b-primary-menu__item b-primary-menu__item_sign-out b-button__content_icon-sign_out">
+                            Sign out
+                        </a>
+                    </nav>
+                </div>
             </div>
         </div>
     </div>
@@ -132,11 +134,6 @@
                 </div>
             </div>
         </div>
-
-
-
     </div>
-
-
 </body>
 </html>
