--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
                     <button type="button" class="b-button">
-                        <span class="b-button__content b-button__content_icon b-button__content_icon-mail">Navigate to Message Center</span>
+                        <span class="b-button__content b-button__content_icon b-button__content_icon-mail b-button_general">Navigate to Message Center</span>
                     </button>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="b-gen-container__button-container col-sm-6 col-md-6 col-lg-6">
                     <button type="button" class="b-button">
-                        <span class="b-button__content b-button__content_icon b-button__content_icon-arrow">Manage Enrollments</span>
+                        <span class="b-button__content b-button__content_icon b-button__content_icon-arrow b-button_arrow">Manage Enrollments</span>
                     </button>
                 </div>
             </div>
