--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
                     <button type="button" class="b-button">
-                        <span class="b-button__content b-button__content_icon b-button__content_icon-arrow">Manage Invoices</span>
+                        <span class="b-button__content b-button__content_icon b-button__content_icon-arrow b-button_arrow">Manage Invoices</span>
                     </button>
                 </div>
             </div>
