icons in header

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <div class="b-nav-bar">
                 <div class="b-nav__primary-menu">
                     <nav class="b-primary-menu">
-                        <a href='#' class="b-primary-menu__item b-primary-menu__item_person-name b-button__content_icon-user_info">
+                        <a href='#' class="b-primary-menu__item b-primary-menu__item_person-name b-button__content_icon-user_info b-button__content_icon">
                             John Doe
                         </a>
-                        <a  href='#' class="b-primary-menu__item b-primary-menu__item_sign-out b-button__content_icon-sign_out">
+                        <a  href='#' class="b-primary-menu__item b-primary-menu__item_sign-out b-button__content_icon-sign_out b-button__content_icon">
                             Sign out
                         </a>
                     </nav>
