--- a/elements.html
+++ b/elements.html
@@ -67,52 +67,73 @@
 <div class=" b-button_icon">
     <span class="b-button__content_icon b-button__content_icon-edit"></span>
 </div> <br><br>
+<div style="width: 338px">
 <form>
-<label>
+    <div class="b-title b-title_radio">GENDER</div>
+<label class="b-label_radio">
     <input type="radio" name="radio" />
     <span class="lbl padding-8">Male</span>
 </label>
-<label>
+<label class="b-label_radio">
     <input type="radio" name="radio" />
     <span class="lbl padding-8">Femel</span>
 </label><br><br>
 </form>
 <form>
-<label>
+    <div class="b-title b-title_radio">IS THE MEMBER A US CITIZEN?</div>
+<label class="b-label_radio">
     <input type="radio" name="radio" />
     <span class="lbl padding-8">Yes</span>
 </label>
-<label>
+<label class="b-label_radio">
     <input type="radio" name="radio" />
     <span class="lbl padding-8">No</span>
 </label><br><br>
 </form>
-<input type="text" placeholder="Name" class="b-input"><br><br>
-<input type="text" placeholder="Last Name" class="b-input"><br><br>
-<input type="text" placeholder="Middle Name" class="b-input"><br><br>
-<input type="text" placeholder="Suffix" class="b-input"><br><br>
+<div class="b-title">NAME</div>
+    <div class="b-input"><input type="text" placeholder="Name" class="b-input_input"></div>
+    <div class="b-input"><input type="text" placeholder="Last Name" class="b-input_input"></div>
+    <div class="b-input"><input type="text" placeholder="Middle Name" class="b-input_input"></div>
+    <div class="b-input"><input type="text" placeholder="Suffix" class="b-input_input"></div>
 
-<input type="text" placeholder="Address Line 1" class="b-input"><br><br>
-<input type="text" placeholder="City" class="b-input"><br><br>
-<input type="text" placeholder="Address Line 2" class="b-input"><br><br>
+    <div class="b-title">RESIDENTAL ADDRESS</div>
+    <div class="b-input"><input type="text" placeholder="Address Line 1" class="b-input_input"></div>
+    <div class="b-input"><input type="text" placeholder="City" class="b-input_input"></div>
+    <div class="b-input"><input type="text" placeholder="Address Line 2" class="b-input_input"></div>
+<div>
 <div class="b-select_arr b-select_arr__short">
-<select class="b-select_select b-select_short">
-    <option value="" disabled selected>Select A State</option>
-    <option value="MD">Maryland</option>
-    <option value="TX">Texas</option>
-</select>
+    <select class="b-select_select b-select_short">
+        <option value="" disabled selected>Select A State</option>
+        <option value="MD">Maryland</option>
+        <option value="TX">Texas</option>
+    </select>
 </div>
-<input type="text" placeholder="Zip Code" class="b-input b-input_short"><br><br>
+    <div class="b-input"><input type="text" placeholder="Zip Code" class="b-input_input b-input_short"></div>
+</div>
+    <div class="b-title">RELATIONSHIP</div>
 <div class="b-select_arr">
     <!--<span class="b-select_arr"></span>-->
-<select class="b-select_select">
-    <option value="" disabled selected>Select A Relationship</option>
-    <option value="MD">Maryland</option>
-    <option value="TX">Texas</option>
-</select>
-</div><br><br>
+    <select class="b-select_select">
+        <option value="" disabled selected>Select A Relationship</option>
+        <option value="MD">Maryland</option>
+        <option value="TX">Texas</option>
+    </select>
+</div>
 
+    <div class="b-title">DATE OF BIRTH</div>
+    <div class="b-select_arr">
+        <!--<span class="b-select_arr"></span>-->
+        <select class="b-select_select b-select_select__date">
+            <option value="" disabled selected>__  / __  / __</option>
+        </select>
+    </div>
 
+    <div class="b-title">PHONE</div>
+    <div class="b-input"><input type="text" placeholder="Phone" class="b-input_input"></div>
+
+    <div class="b-title">EMAIL</div>
+    <div class="b-input"><input type="text" placeholder="Email" class="b-input_input"></div>
+</div>
 
 </body>
 </html>
