--- a/Citizen_Dashboard.html
+++ b/Citizen_Dashboard.html
@@ -98,38 +98,78 @@
                 </button>
             </div>
         </div>
-        <div class="b-gen-container__container-pane b-gen-container__container-pane_link_color ">
 
-            <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4">
-                    <ul>
-                        <li class="b-gen-container__container-pane_row-distance"><a
-                                class="b-gen-container__container-pane_marker-distance">Look up a Household Case</a>
-                        </li>
-                        <li class="b-gen-container__container-pane_row-distance"><a
-                                class="b-gen-container__container-pane_marker-distance">Enroll a Citizen</a></li>
-                    </ul>
+        <div class="b-table-container">
+            <div class="b-table-container__header-box">
+                <div class="row">
+                    <div class="col-lg-3 b-table-container__table-container__col-heading">name</div>
+                    <div class="col-lg-2 b-table-container__table-container__col-heading">medicaid id</div>
+                    <div class="col-lg-6 b-table-container__table-container__col-heading ">eligibility type</div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-4">
-                    <ul>
-                        <li class="b-gen-container__container-pane_row-distance"><a
-                                class="b-gen-container__container-pane_marker-distance">Update Enrollments</a></li>
-                        <li class="b-gen-container__container-pane_row-distance"><a
-                                class="b-gen-container__container-pane_marker-distance">Manage Enrollment Activites</a>
-                        </li>
-                    </ul>
+            </div>
+            <div class="b-gen-container__table">
+                <div class="row b-table-container__table-container__row">
+                    <div class="b-table-container__table-container__row__dividing-line">
+                        <div class="col-lg-3 b-table-container__table-container__col__vcenter ">
+                            <h2 class="b-gen-container__header-heading-text">John Doe</h2>
+                            <i>Primary Applicant</i>
+                        </div>
+                        <div class="col-lg-2 b-table-container__table-container__col__vcenter ">
+                            64100
+                        </div>
+                        <div class="col-lg-5 b-table-container__table-container__col__vcenter ">
+                            Individuals Receiving Mandatory State Supplements
+                        </div>
+                        <div class="col-lg-1  pull-right b-gen-container__icon-container ">
+                            <div class=" b-button_icon">
+                                <span class="b-button__content_icon b-button__content_icon-edit"></span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class=" col-lg-4 col-md-4 col-sm-4">
-                    <ul>
-                        <li class="b-gen-container__container-pane_row-distance"><a
-                                class="b-gen-container__container-pane_marker-distance">Manage Past Enrollments</a></li>
-                        <li class="b-gen-container__container-pane_row-distance"><a
-                                class="b-gen-container__container-pane_marker-distance">Monitor Enrollment Counts</a>
-                        </li>
-                    </ul>
+                <div class="row b-table-container__table-container__row">
+                    <div class="b-table-container__table-container__row__dividing-line">
+                    <div class="col-lg-3 b-table-container__table-container__col__vcenter ">
+                        <h2 class="b-gen-container__header-heading-text">JANE Doe</h2>
+                        <i>Spouse</i>
+                    </div>
+                    <div class="col-lg-2 b-table-container__table-container__col__vcenter ">
+                        64100
+                    </div>
+                    <div class="col-lg-5 b-table-container__table-container__col__vcenter ">
+                        Qualified Pregnant Women and Children
+                    </div>
+                    <div class="col-lg-1  pull-right b-gen-container__icon-container ">
+                        <div class=" b-button_icon">
+                            <span class="b-button__content_icon b-button__content_icon-edit"></span>
+                        </div>
+                    </div>
+                    </div>
+
+                </div>
+                <div class="row b-table-container__table-container__row">
+                    <div class="b-table-container__table-container__row__dividing-line">
+                    <div class="col-lg-3 b-table-container__table-container__name-col b-table-container__table-container__col__vcenter">
+                        <h2 class="b-gen-container__header-heading-text">Karl Doe</h2>
+                        <i>Child/Stepchild</i>
+                    </div>
+                    <div class="col-lg-2 b-table-container__table-container__id-col b-table-container__table-container__col__vcenter  ">
+                        64100
+                    </div>
+                    <div class="col-lg-5 b-table-container__table-container__type-col b-table-container__table-container__col__vcenter ">
+                        Individuals Receiving Mandatory State Supplements
+                    </div>
+                    <div class="col-lg-1  pull-right b-gen-container__icon-container ">
+                        <div class=" b-button_icon">
+                            <span class="b-button__content_icon b-button__content_icon-edit"></span>
+                        </div>
+                    </div>
+                    </div>
                 </div>
             </div>
         </div>
+
+
     </div>
     <div class="container b-gen-container">
         <div class="b-gen-container__header-pane row ">
