Citizen Dashboard  pixel adjustment

--- a/Citizen_Dashboard.html
+++ b/Citizen_Dashboard.html
@@ -44,15 +44,15 @@
 </div>
 
 <div class="b-dashboard__content">
-    <div class="container b-gen-container">
+    <div class="container b-gen-container b-gen-container__container-pane__citizen-box">
         <div class="b-gen-container__main-pane row ">
-            <div class="col-lg-3 ">
+
+            <div class="col-lg-8 ">
                 <div class="b-gen-container__main-pane_greeting-img">
                     <img src="images/mock_Img.png" alt="">
                 </div>
-            </div>
-            <div class="col-lg-5 ">
-                <div class="b-gen-container__main-pane_owner-description">
+
+                <div class="b-gen-container__main-pane_owner-description b-gen-container__main-pane_owner-description__offset">
                     <h2 class="b-gen-container__main-pane_header">Own Your Own Health</h2>
 
                     <p class="b-gen-container__main-pane_owner-description_text">In support of our vision to protect and
@@ -65,7 +65,7 @@
                     <button type="button" class="b-button b-button_green b-button_apply">
                         <span class="b-button__content b-button__content_icon b-button__content_icon-paper">Apply for Benefits</span>
                     </button>
-                    <button type="button" class="b-button b-button_gray">
+                    <button type="button" class="b-button b-button_gray b-button__main-pane__button-container__offset">
                         <span class="b-button__content b-button__content_icon b-button__content_icon-upload">Upload Supporting Documents</span>
                     </button>
                 </div>
