add html and style for  alternative condition  Citizen Dashboard change style

--- a/Citizen_Dashboard_alternative.html
+++ b/Citizen_Dashboard_alternative.html
@@ -178,7 +178,7 @@
             </div>
             <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
                 <button type="button" class="b-button">
-                    <span class="b-button__content b-button__content_icon b-button__content_icon-arrow">Manage Invoices</span>
+                    <span class="b-button__content b-button__content_icon b-button__content_icon-view b-button_general">View Benefit Details</span>
                 </button>
             </div>
         </div>
@@ -246,20 +246,24 @@
             </div>
             <div class="b-gen-container__button-container  col-sm-6 col-md-6 col-lg-6">
                 <button type="button" class="b-button">
-                    <span class="b-button__content b-button__content_icon b-button__content_icon-pay">Make Payment</span>
+                    <span class="b-button__content b-button__content_icon b-button__content_icon-pay b-button_general">Make Payment</span>
                 </button>
             </div>
         </div>
-        <div class=" b-gen-container__container-pane ">
+        <div class=" b-gen-container__container-pane b-gen-container__container-pane__payment_font-style ">
             <div class="row">
-                <div class="b-gen-container__container-pane_link_color">
-                    <div class="col-lg-4 text-left"><span
-                            class="text-uppercase">Total Balance:</span><strong>$100.00</strong></div>
-                    <div class="col-lg-4 text-center"><span class="text-uppercase">Status:</span><strong>New</strong>
+                    <div class="col-lg-4 text-left">
+                        <span class="text-uppercase">Total Balance:</span>
+                        <span class="b-gen-container__container-pane__payment_emphasized-text">$100.00</span>
                     </div>
-                    <div class="col-lg-4 text-right"><span
-                            class="text-uppercase">Due Date:</span><strong>11/15/2015</strong></div>
-                </div>
+                    <div class="col-lg-4 text-center">
+                        <span class="text-uppercase">Status:</span>
+                        <span class="b-gen-container__container-pane__payment_emphasized-text">New</span>
+                    </div>
+                    <div class="col-lg-4 text-right">
+                        <span class="text-uppercase">Due Date:</span>
+                        <span class="b-gen-container__container-pane__payment_emphasized-text">11/15/2015</span>
+                    </div>
             </div>
         </div>
     </div>
